
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ PFNGLSTENCILOPVALUEAMDPROC ;
typedef scalar_t__ (* GLADloadproc ) (char*) ;


 int GLAD_GL_AMD_stencil_operation_extended ;
 scalar_t__ glad_glStencilOpValueAMD ;

__attribute__((used)) static void load_GL_AMD_stencil_operation_extended(GLADloadproc load) {
 if(!GLAD_GL_AMD_stencil_operation_extended) return;
 glad_glStencilOpValueAMD = (PFNGLSTENCILOPVALUEAMDPROC)load("glStencilOpValueAMD");
}
